# gitlab-copilot-agent

./: .env.k3d.example  .gitignore  .lint-baseline.json  Dockerfile  Dockerfile.sandbox  GOVERNANCE.md  LICENSE  Makefile  README.md  config.example.yaml  config.schema.json  pyproject.toml  seccomp-bwrap.json  system-diagram.md
.copilot-tracking/plans/2026-04-09/: architecture-restructuring-impl-plan.instructions.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: architect.agent.md  designer.agent.md  developer.agent.md  orchestrator.agent.md  product.agent.md
.github/codeql/: codeql-config.yml
.github/instructions/: devcontainer.instructions.md  python.instructions.md
.github/skills/adr-creation/: SKILL.md
.github/skills/ci-failure-debugging/: SKILL.md
.github/skills/code-review/: SKILL.md
.github/skills/container-hardening/: SKILL.md
.github/skills/conventional-commits/: SKILL.md
.github/skills/devcontainer-setup/: SKILL.md
.github/skills/github-workflow/: SKILL.md
.github/skills/owasp-review/: SKILL.md
.github/skills/pre-implementation/: SKILL.md
.github/skills/stacked-prs/: SKILL.md
.github/skills/test-quality/: SKILL.md
.github/skills/worktree-setup/: SKILL.md
.github/workflows/: cd-dev.yml  cd-staging.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  deploy.yml  e2e.yml  pr-size-check.yml
docs/: DEMO.md  PLAN.md  jira-coding-agent-plan.md
docs/adr/: 0001-mr-review-service-architecture.md  0002-explicit-sandbox-configuration.md  0003-kubernetes-migration-plan.md  0004-azure-container-apps-migration.md  0005-azure-storage-queue-dispatch.md  0006-unified-dispatch-keda-azurite.md  0007-yaml-mapping-credential-registry.md  0008-blob-based-repo-transfer.md  0009-incremental-review-sha-marker.md  0010-gitlab-centric-config-v2.md  0011-typed-appcontext.md  0012-httpx-gitlab-client.md  0013-task-event-model.md  0014-unified-dedup-service.md  0015-pipeline-protocol.md  0016-prompt-strategy-toggle.md  0017-e2e-tracing-traceparent-propagation.md  0018-security-hardening.md
docs/research/: copilot-sdk-python.md  gitlab-api.md
docs/wiki/: architecture-overview.md  concurrency-and-state.md  configuration-reference.md  data-models.md  deployment-guide.md  index.md  module-reference.md  observability.md  request-flows.md  security-model.md  task-execution.md  testing-guide.md
fuzz/: README.md  fuzz_sanitizer.py  fuzz_webhook_payload.py
helm/gitlab-copilot-agent/: Chart.yaml  values-local.yaml  values.yaml
helm/gitlab-copilot-agent/templates/: _helpers.tpl  azurite.yaml  configmap.yaml  deployment.yaml  networkpolicy-azurite.yaml  networkpolicy-controller.yaml  networkpolicy-job.yaml  networkpolicy-redis.yaml  otel-collector.yaml  otel-sidecar-config.yaml  rbac.yaml  redis.yaml  scaledjob.yaml  secret.yaml  service.yaml
infra/: .tflint.hcl  README.md  backend.tf  container-apps.tf  dev.tfvars  dev.tfvars.example  keyvault.tf  main.tf  monitoring.tf  networking.tf  outputs.tf  redis.tf  staging.tfvars  storage.tf  variables-apps.tf  variables.tf
scripts/: build-sandbox-image.sh  check_lint_baseline.py  demo_provision.py  demo_record.py  demo_reset_mr.py  entrypoint.sh  gen-k3d-values.sh  otel_console_collector.py  pre-commit  test_copilot_sdk.py  test_gitlab_api.py  test_trace_propagation.py
scripts/demo_provision/: __init__.py  config_generator.py  gitlab_provisioner.py  jira_provisioner.py
scripts/demo_templates/blog-api/: .gitlab-ci.yml  AGENTS.md  README.md  pyproject.toml
scripts/demo_templates/blog-api/.github/: copilot-instructions.md
scripts/demo_templates/blog-api/.github/agents/: security-reviewer.agent.md
scripts/demo_templates/blog-api/.github/instructions/: python.instructions.md
scripts/demo_templates/blog-api/.github/skills/security-patterns/: SKILL.md
scripts/demo_templates/blog-api/src/demo_app/: auth.py  database.py  main.py  models.py
scripts/demo_templates/blog-api/tests/: test_main.py
src/gitlab_copilot_agent/: __init__.py  aca_executor.py  app_context.py  approval_store.py  azure_storage.py  coding_engine.py  coding_orchestrator.py  coding_pipeline.py  coding_workflow.py  comment_parser.py  comment_poster.py  concurrency.py  config.py  config_v2.py  container.py  copilot_session.py  credential_registry.py  dedup.py  discussion_engine.py  discussion_handler.py  discussion_models.py  discussion_orchestrator.py  discussion_pipeline.py  error_messages.py  events.py  git_operations.py  gitlab_client.py  gitlab_poller.py  gitlab_webhook.py  incremental.py  jira_client.py  jira_models.py  jira_poller.py  k8s_executor.py  main.py  mapping_cli.py  mapping_models.py  metrics.py  models.py  mr_comment_handler.py  (+21 more)
src/gitlab_copilot_agent/concurrency/: __init__.py  memory.py  protocols.py
src/gitlab_copilot_agent/config/: __init__.py  base.py  runner_settings.py  settings.py  validators.py
src/gitlab_copilot_agent/git/: __init__.py  archive.py  clone.py  (+3 more)
tests/: conftest.py  test_aca_executor.py  test_app_context.py  test_approval_store.py  test_azure_storage.py  test_coding_engine.py  test_coding_orchestrator.py  test_coding_pipeline.py  test_coding_workflow.py  test_comment_parser.py  test_comment_poster.py  test_concurrency.py  test_config.py  test_config_v2.py  test_container.py  test_copilot_session.py  test_credential_registry.py  test_dedup.py  test_discussion_engine.py  test_discussion_handler.py  test_discussion_models.py  test_discussion_orchestrator.py  test_discussion_pipeline.py  test_events.py  test_file_based_strategy.py  test_git_apply.py  test_git_operations.py  test_gitlab_client.py  test_gitlab_poller.py  test_gitlab_webhook.py  test_hot_reload.py  test_incremental.py  test_ingress.py  test_integration.py  test_jira.py  test_jira_poller.py  test_k8s_executor.py  test_k8s_integration.py  test_main.py  test_mapping_cli.py  (+25 more)
tests/e2e/: .env.e2e  aca_integration.py  mock_gitlab.py  mock_jira.py  mock_llm.py  run.sh
tests/test_demo_provision/: conftest.py  test_config_generator.py  test_gitlab_provisioner.py  test_jira_provisioner.py
(+11 files in other folders)
