[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitlab-copilot-agent"
version = "0.1.0"
description = "Automated GitLab MR reviews powered by GitHub Copilot SDK"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.8",
    "uvicorn[standard]==0.34.0",
    "python-gitlab==8.1.0",
    "github-copilot-sdk==0.1.23",
    "pydantic==2.12.5",
    "pydantic-settings==2.7.1",
    "structlog==25.5.0",
    "python-frontmatter>=1.1.0",
    "httpx==0.28.1",
    "opentelemetry-api~=1.39",
    "opentelemetry-sdk~=1.39",
    "opentelemetry-exporter-otlp-proto-grpc~=1.39",
    "opentelemetry-instrumentation-fastapi~=0.60b1",
    "opentelemetry-instrumentation-httpx~=0.60b1",
    "redis[hiredis]>=7.2.0",
]

[project.optional-dependencies]
kubernetes = ["kubernetes>=28.1.0"]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.3",
    "httpx==0.28.1",
    "mypy==1.14.1",
    "ruff==0.9.6",
    "playwright>=1.48.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=gitlab_copilot_agent --cov-report=term-missing --cov-fail-under=90 --ignore=tests/test_k8s_integration.py -m 'not k8s'"
markers = [
    "k8s: requires a running k8s cluster (deselect with '-m \"not k8s\"')",
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.hatch.build.targets.wheel]
packages = ["src/gitlab_copilot_agent"]

[dependency-groups]
dev = [
    "fakeredis>=2.34.0",
    "lupa>=2.6",
    "mypy>=1.14.1",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.9.6",
]
