[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitlab-copilot-agent"
version = "0.1.0"
description = "Automated GitLab MR reviews powered by GitHub Copilot SDK"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.2",
    "uvicorn[standard]==0.42.0",
    "python-gitlab==8.1.0",
    "github-copilot-sdk==0.2.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "structlog==25.5.0",
    "python-frontmatter>=1.1.0",
    "httpx==0.28.1",
    "opentelemetry-api~=1.39",
    "opentelemetry-sdk~=1.39",
    "opentelemetry-exporter-otlp-proto-grpc~=1.39",
    "opentelemetry-exporter-otlp-proto-http~=1.39",
    "opentelemetry-instrumentation-fastapi~=0.60b1",
    "opentelemetry-instrumentation-httpx~=0.60b1",
    "pyyaml==6.0.3",
]

[project.scripts]
mapping-helper = "gitlab_copilot_agent.mapping_cli:main"

[project.optional-dependencies]
kubernetes = ["kubernetes>=28.1.0"]
azure = [
    "azure-identity>=1.17.0",
    "aiohttp>=3.9.0",
    "azure-storage-queue>=12.12.0",
    "azure-storage-blob>=12.24.0",
]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
    "ruff==0.15.8",
    "pyright>=1.1.400",
    "playwright>=1.48.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=gitlab_copilot_agent --cov-report=term-missing --cov-fail-under=90 --ignore=tests/test_k8s_integration.py -m 'not k8s'"
markers = [
    "k8s: requires a running k8s cluster (deselect with '-m \"not k8s\"')",
]
filterwarnings = [
    "ignore:Call to '__init__' function with deprecated usage:DeprecationWarning",
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportMissingModuleSource = false
reportMissingTypeStubs = false

[tool.ruff]
target-version = "py312"
line-length = 99
extend-exclude = ["tests/e2e/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.hatch.build.targets.wheel]
packages = ["src/gitlab_copilot_agent"]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.9.6",
    "azure-identity>=1.17.0",
    "azure-storage-queue>=12.12.0",
    "azure-storage-blob>=12.24.0",
    "aiohttp>=3.9.0",
]
