[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitlab-copilot-agent"
version = "0.1.0"
description = "Automated GitLab MR reviews powered by GitHub Copilot SDK"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.47.0",
    "github-copilot-sdk==0.3.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "structlog==25.5.0",
    "python-frontmatter==1.1.0",
    "httpx==0.28.1",
    "opentelemetry-api==1.40.0",
    "opentelemetry-sdk==1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.40.0",
    "opentelemetry-exporter-otlp-proto-http==1.40.0",
    "opentelemetry-instrumentation-fastapi==0.61b0",
    "opentelemetry-instrumentation-httpx==0.61b0",
    "pyyaml==6.0.3",
]

[project.scripts]
mapping-helper = "gitlab_copilot_agent.mapping_cli:main"

[project.optional-dependencies]
kubernetes = ["kubernetes==35.0.0"]
azure = [
    "azure-identity==1.25.3",
    "aiohttp==3.13.5",
    "azure-storage-queue==12.16.0",
    "azure-storage-blob==12.29.0",
    "azure-data-tables==12.7.0",
]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
    "ruff==0.15.13",
    "pyright==1.1.409",
    "playwright==1.59.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=gitlab_copilot_agent --cov-report=term-missing --cov-fail-under=90 --ignore=tests/test_k8s_integration.py -m 'not k8s'"
markers = [
    "k8s: requires a running k8s cluster (deselect with '-m \"not k8s\"')",
]
filterwarnings = [
    "ignore:Call to '__init__' function with deprecated usage:DeprecationWarning",
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportMissingModuleSource = false
reportMissingTypeStubs = false

[tool.ruff]
target-version = "py312"
line-length = 99
extend-exclude = ["tests/e2e/fixtures"]

[tool.ruff.lint]
select = [
    "E", "W",       # pycodestyle
    "F",             # pyflakes
    "B",             # bugbear
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "SIM",           # simplify
    "I",             # isort
    "D",             # pydocstyle
    "ANN",           # annotations
    "TCH",           # type-checking imports
    "PTH",           # pathlib over os.path
    "RET",           # return consistency
    "RUF",           # ruff-native
    "PLE",           # pylint errors
    "PLW",           # pylint warnings
]
ignore = [
    "ANN401",        # disallows Any — pyright strict + comment convention handles this
    "D107",          # __init__ docstrings — class docstring covers constructor args
    "D212",          # conflicts with D213
    "RUF100",        # defer until existing noqa audit — 19 load-bearing noqa comments reference non-selected rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D", "PLR"]
"**/__init__.py" = ["D104"]

[tool.hatch.build.targets.wheel]
packages = ["src/gitlab_copilot_agent"]

[dependency-groups]
dev = [
    "pyright==1.1.409",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.13",
    "azure-identity==1.25.3",
    "azure-storage-queue==12.16.0",
    "azure-storage-blob==12.29.0",
    "azure-data-tables==12.7.0",
    "aiohttp==3.13.5",
    "check-jsonschema==0.37.2",
    "hypothesis==6.152.7",
]
fuzz = [
    "atheris==3.0.0",
]
